@@ -1,0 +1,6 @@
+# -*- Mode: Python -*-
+# vi:si:et:sw=4:sts=4:ts=4
+
+import gettext
+
+_ = gettext.gettext
